# monokit

./: .gitignore  AUDIO_DEVICE_PLAN.md  AUDIO_METERING_PLAN.md  BUILD_VERIFICATION.md  CHANGELOG.md  CLAUDE.md  CONCEPT.md  Cargo.toml  DRY_ANALYSIS_REPORT.md  DRY_PHASE4_PLAN.md  DRY_REFACTOR_PLAN.md  DSP_TIER1_IMPLEMENTATION_PLAN.md  DSP_TIER3_BUFFER_EFFECTS_PLAN.md  EFFECT_ROUTING_DESIGN.md  EXECUTED  FUTURE_IDEAS.md  PHASE6_POLISH_PLAN.md  PHASE_5_2_PLAN.md  PLAITS_INTEGRATION_PLAN.md  PLAN.md  README.md  RELEASE_PLAN.md  REPL_AUDIT_PLAN.md  ROADMAP.md  TEST_FIX_PLAN.md  UI_REFINEMENT_PLAN.md  VOICE_DIAGRAM.md  command_reference.md  config.toml  config.toml.example  documentation_index.md  progress.md  repl_dump.txt  roadmap pri.txt  test_noise_syntax.scd
abl_themes/: Angst Robot.ask  Classic Medium Dark.ask  Classic Medium Light.ask  Default Dark Cool High.ask  Default Dark Cool Medium.ask  Default Dark Neutral High.ask  Default Dark Neutral Medium.ask  Default Dark Warm High.ask  Default Dark Warm Medium.ask  Default Light Cool High.ask  Default Light Cool Medium.ask  Default Light Neutral High.ask  Default Light Neutral Medium.ask  Default Light Warm High.ask  Default Light Warm Medium.ask  Immaterial.ask  Riparian.ask  Twenty-Four Carat.ask  botanica.ask  classic_medium__tweak_.ask  dat_theme1.ask  honeypot.ask  incarnon_remix______monochrome.ask  kin_remix.ask  light_greyish_teal_remix.ask  maxbeeps2.ask  minimalimonima.ask  neo_peachio remix.ask  neo_peachio.ask  nougat.ask  pamplemous.ask  peach.ask  purple_swag.ask  said_violetstar.ask  sonokai.ask  spp.ask  tingjun.ask  white___pink_remix.ask
build_scripts/: README.md  compile_synthdefs.scd  run_compile.scd  test_load_synthdefs.scd  verify_phase1.sh
docs/: ARCHITECTURE.md  BUILD_RACE_CONDITION_FIX.md  BUNDLE_QUICK_START.md  CHANGELOG.md  CL_COMMAND_DEBUG_TEST.md  COMMAND_CONSISTENCY_AUDIT.md  COMMAND_REFERENCE.md  CONCEPT.md  CROSS_PLATFORM_AUDIO.md  CROSS_PLATFORM_PORT.md  DEBUG_TIERS.md  (+24 more)
(+365 files in other folders)
