[package]
name = "monokit"
version = "0.1.0"
edition = "2021"
description = "Teletype-style scripting for a complex oscillator drum voice"

[dependencies]
# OSC protocol
rosc = "0.10"

# REPL / readline
rustyline = "13"

# Parser
nom = "7"

# Async runtime for metro
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization for saving state
serde = { version = "1", features = ["derive"] }
serde_json = "1"
