[package]
name = "monokit"
version = "0.1.0"
edition = "2021"
description = "Teletype-style scripting for a complex oscillator drum voice"

[dependencies]
# OSC protocol
rosc = "0.10"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Parser
nom = "7"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization for saving state
serde = { version = "1", features = ["derive"] }
serde_json = "1"
