[package]
name = "monokit"
version = "0.4.11"
edition = "2021"
license = "GPL-2.0"
description = "Teletype-style scripting for a complex oscillator drum voice"

[features]
default = []
scsynth-direct = []

[dependencies]
# OSC protocol
rosc = "0.10"

# MIDI input
midir = "0.10"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Parser
nom = "7"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization for saving state
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Random number generation for PROB
rand = "0.8"
serde-big-array = "0.5.1"

# Static initialization for alias maps
once_cell = "1.19"

# Configuration and theming
toml = "0.8"
dirs = "5"
dark-light = "1.0"

# Timing infrastructure
spin_sleep = "1.2"
chrono = "0.4"
audio_thread_priority = "0.32"

# Socket buffer configuration
socket2 = "0.5"

# Audio device enumeration (macOS)
[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"
